--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":  "Data source=datingapp.db"
+    "DefaultConnection": "Data source=datingapp.db"
   },
+  "TokenKey": "super secret dev key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
